# capstone_project

./: .dockerignore  .gitignore  README.md  docker-compose.yml  docker_build.sh  frames_2026-05-11_20.39.11.gv
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: colcon-build.yml
docker/: Dockerfile  docker_run.sh
docs/: collaboration.md  scout_operation.md  test.md
src/: README.md
src/bringup_pkg/: CMakeLists.txt  README.md  package.xml
src/bringup_pkg/config/: nav2_params.yaml  slam_toolbox.yaml
src/bringup_pkg/launch/: scout_cctv_nav2.launch.py  scout_nav2.launch.py  scout_slam.launch.py
src/bringup_pkg/maps/: scout_mini_map_2.pgm  scout_mini_map_2.yaml  scout_mini_map_3.pgm
src/cctv_costmap_layer/: README.md  package.xml
src/cctv_costmap_layer/include/cctv_costmap_layer/: cctv_layer.hpp
src/cctv_object_tools/: package.xml  setup.cfg  setup.py
src/cctv_object_tools/cctv_object_tools/: rviz_click_to_pose_array.py
src/cctv_object_tools/launch/: rviz_click_to_pose_array.launch.py
src/cctv_object_tools/resource/: cctv_object_tools
src/perception_msgs/: CMakeLists.txt  package.xml
src/perception_msgs/msg/: TrackedObject.msg
src/perception_pkg/: CMakeLists.txt  README.md  Test.md  package.xml  setup.py
src/perception_pkg/config/: aruco_image_homography.yaml  cam_to_map.yaml  cctv_fov.yaml  cctv_to_map.yaml  floor_to_map.yaml  floor_to_map_calibrator.yaml  floor_to_map_tf.yaml  fusion.yaml  ground_contact_extractor.yaml  image_to_floor.yaml  lidar_object.yaml  yolo_detector.yaml  yolo_to_map_projector.yaml
src/perception_pkg/launch/: calibrate_floor_to_map.launch.py  calibrate_image_to_floor.launch.py  cctv_perception.launch.py  cctv_projection_pipeline.launch.py  cctv_to_map.launch.py  cctv_to_map_pipeline.launch.py  perception_demo.launch.py  yolo_detector.launch.py
src/perception_pkg/scripts/: aruco_floor_to_map_calibrator.py  aruco_image_homography_node.py  cam_to_map_node.py  cctv_fov_node.py  cctv_pose_node.py  cctv_to_map_node.py  floor_to_map_tf_broadcaster_node.py  fusion_node.py  lidar_object_node.py  pixel_picker_node.py  yolo_detector_node.py  yolo_to_map_projector_node.py
src/perception_pkg/src/: floor_to_map_node.cpp  ground_contact_extractor_node.cpp
src/scout_ws/: CCTV_COSTMAP_DEMO.md  README.md  rviz.rviz
src/scout_ws/cctv_costmap_layer/: CMakeLists.txt  cctv_costmap_plugins.xml
src/scout_ws/cctv_costmap_layer/src/: cctv_layer.cpp
src/scout_ws/cctv_object_tools/cctv_object_tools/: __init__.py
src/scout_ws/scout_mini_bringup/: CMakeLists.txt  README.md  package.xml
src/scout_ws/scout_mini_bringup/config/: nav2_params_cctv.yaml
src/scout_ws/scout_mini_bringup/launch/: scout_cctv_nav2.launch.py  scout_nav2.launch.py  scout_slam.launch.py
src/scout_ws/scout_mini_bringup/maps/: README.md  scout_mini_map.pgm  scout_mini_map.yaml  scout_mini_map_3.yaml
src/scout_ws/scout_mini_bringup/rviz/: README.md
src/scout_ws/scout_ros2/scout_base/src/: scout_base_node.cpp
src/scout_ws/velodyne/velodyne/launch/: velodyne-final-VLP32C-composed-launch.py
src/scout_ws/velodyne/velodyne_laserscan/: README.md
src/scout_ws/velodyne/velodyne_laserscan/config/: default-velodyne_laserscan_node-params.yaml
src/scout_ws/velodyne/velodyne_pointcloud/: README.md
src/scout_ws/velodyne/velodyne_pointcloud/config/: VLP16-velodyne_transform_node-params.yaml  VLP32C-velodyne_transform_node-params.yaml
src/scout_ws/velodyne/velodyne_pointcloud/include/velodyne_pointcloud/: transform.hpp
src/scout_ws/velodyne/velodyne_pointcloud/src/conversions/: transform.cpp
src/scout_ws/velodyne/velodyne_pointcloud/src/lib/: rawdata.cpp
